fix welcome-section margin on mobile

--- a/style.css
+++ b/style.css
@@ -87,8 +87,9 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 140px);
   background-color: #003;
+  margin-top: 140px;
 }
 
 #welcome-section a {
